**************************************************
* Social Networks Visualiser (SocNetV) for Linux *
**************************************************


ChangeLog:



Version 0.48 - Sep 21 2008
Codename: "Road to nowhere?"
------------------------------
--Fixed bug edges which made them drawed twice.
--Fixed bugs in loadPajek().


Version 0.47 - Sep 12 2008
Codename: "En leukw"
------------------------------
--Fixed bug in adjacency matrix loading/saving.
--Edges are drawed once, even the reciprocal ones. 
  This makes network loading faster...
--Cosmetic changes in canvas (labels stay above edges, etc).
--Fixed another bug in loadPajek().



Version 0.46 - Sep 11 2008
Codename: "Autumn leaves"
------------------------------

--Zoom in and out via mouse wheel work nice.
--Nodes (triangles, diamonds) resize as they should.
--Node shapes are now saved to Pajek files.
--New layout method displaying node sizes according to their outdegrees.
--Code cleanup and bugfixes in loading Pajek files.



Version 0.45 - Aug 30 2008
Codename: "Changes"
------------------------------

- GraphML initial support.
- New man page and updated online documentation.
- HtmlViewer renders online help with the help of QtWebKit (openSUSE: libQtWebKit-devel)
- New widget for network rotation.
- New widget for zooming replaces the old one.
- Nodes may have 4 different shapes: circles, diamonds, triangles, boxes and ellipses are supported.
- There was a bug in Qt 4.3 QGraphicsView causing redraw delays. Is fixed in Qt 4.4 :)
- Cosmetic changes, i.e. new icons, new layout for the left dock.
- Code clean-up in MainWindows Class and Matrix. Deleted obsolete members and functions such as nodeExists(), mousePosGW(), Dijkstra, etc. 
- Fixed bugs on loading Pajek networks and layout algorithm.



Version 0.44 - May 1st 2008
Codename: "Strike"
------------------------------
- Changed license to GPL3
- Complete code rewrite, build on Qt 4.x and Graphics View framework.