@@ -25,12 +25,12 @@ Centralities are calculated for each node and for the whole network. Thus, when 
 <h4><a name="In" id="In"></a>In-Degree Centrality</h4>
 <p class="text"> 
 In-Degree Centrality (IDC) is the number of arcs ending at each node. 
-The degree is a measure of the 'activity' of the node. Most in-degree central node might be consider more prominent among others. 
+The degree is a measure of the 'activity' of the node. Most in-degree central node might be considered more prominent among others. 
 </p>
 
 <h4><a name="Out" id="Out"></a>Out-Degree Centrality</h4>
 <p class="text">
-Out-Degree Centrality (ODC) is the number of arcs starting from each node. Again this is a measure of activity and a more out-degree central node 
+Out-Degree Centrality (ODC) is the number of arcs starting from each node. This is oftenly  a measure of activity.
 </p>
 
 
