@@ -6,12 +6,14 @@
 ChangeLog:
 
 
-
 Version 0.48 - Sep 21 2008
 Codename: "Road to nowhere?"
 ------------------------------
 --Fixed bug edges which made them drawed twice.
+--Graph API simplification
+--Fixed bugs in removeNode methods.
 --Fixed bugs in loadPajek().
+--Documentation update
 
 
 Version 0.47 - Sep 12 2008
